--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.zimincom.messagewallpaper.activities.MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/loadImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
