--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,15 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zimincom.messagewallpaper.activities.IntroActivity">
+    tools:context="com.zimincom.remotewallpaper.activities.IntroActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="환영합니다!"
+        android:fontFamily="NanumGothic"
+        android:text="환영환영"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="NanumGothic"
+        android:text="한글한글아릅답게"
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="375dp"/>
 </android.support.constraint.ConstraintLayout>
